--- a/src/components/ui/button/button.scss
+++ b/src/components/ui/button/button.scss
@@ -74,6 +74,7 @@
         border-radius: $radius-sm;
 
         .btn__icon {
+            color: inherit;
             margin: 0;
         }
     }
